tests/asm-link/pops-no-pushed-sections/rgbasm.err
error: no entries in the section stack
   ╭─[ test.asm:1:1 ]
   │
 1 │ POPS
   │ ──┬─  
   │   ╰─── cannot pop
───╯
1 error generated.
